; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx4/extr_en_resources.c_mlx4_en_change_mcast_lb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx4/extr_en_resources.c_mlx4_en_change_mcast_lb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_en_priv = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.mlx4_qp = type { i32 }
%struct.mlx4_update_qp_params = type { i32 }

@MLX4_UPDATE_QP_PARAMS_FLAGS_ETH_CHECK_MC_LB = common dso_local global i32 0, align 4
@MLX4_UPDATE_QP_ETH_SRC_CHECK_MC_LB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx4_en_change_mcast_lb(%struct.mlx4_en_priv* %0, %struct.mlx4_qp* %1, i32 %2) #0 {
  %4 = alloca %struct.mlx4_en_priv*, align 8
  %5 = alloca %struct.mlx4_qp*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.mlx4_update_qp_params, align 4
  store %struct.mlx4_en_priv* %0, %struct.mlx4_en_priv** %4, align 8
  store %struct.mlx4_qp* %1, %struct.mlx4_qp** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = call i32 @memset(%struct.mlx4_update_qp_params* %8, i32 0, i32 4)
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* @MLX4_UPDATE_QP_PARAMS_FLAGS_ETH_CHECK_MC_LB, align 4
  %14 = getelementptr inbounds %struct.mlx4_update_qp_params, %struct.mlx4_update_qp_params* %8, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  br label %15

15:                                               ; preds = %12, %3
  %16 = load %struct.mlx4_en_priv*, %struct.mlx4_en_priv** %4, align 8
  %17 = getelementptr inbounds %struct.mlx4_en_priv, %struct.mlx4_en_priv* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.mlx4_qp*, %struct.mlx4_qp** %5, align 8
  %22 = getelementptr inbounds %struct.mlx4_qp, %struct.mlx4_qp* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @MLX4_UPDATE_QP_ETH_SRC_CHECK_MC_LB, align 4
  %25 = call i32 @mlx4_update_qp(i32 %20, i32 %23, i32 %24, %struct.mlx4_update_qp_params* %8)
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* %7, align 4
  ret i32 %26
}

declare dso_local i32 @memset(%struct.mlx4_update_qp_params*, i32, i32) #1

declare dso_local i32 @mlx4_update_qp(i32, i32, i32, %struct.mlx4_update_qp_params*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
